other files added

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ZURI | Learn, Build, Grow.</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -24,14 +25,14 @@
                     goals</a></p>
         </div>
 
-    <div class="btns">
-        <div class=" my-redbtn">
-            <button><a href="industry.html" target="_parent">I'm new to the Industry</a></button>
+        <div class="btns">
+            <div class=" my-redbtn">
+                <button><a href="industry.html" target="_parent">I'm new to the Industry</a></button>
+            </div>
+            <div class=" my-redbtnoutline">
+                <button><a href="industryexperience.html" target="_parent">I need industry experience</a></button>
+            </div>
         </div>
-        <div class=" my-redbtnoutline">
-            <button><a href="industryexperience.html" target="_parent">I need industry experience</a></button>
-        </div>
-    </div>
     </div>
 
     <div class="zuri-container2">
@@ -40,45 +41,30 @@
             <p class="slogan">We cater for every level of <br> expertise and needs in the industry.</p>
         </div>
     </div>
+
     <div class="flex-content">
-        <div class="zuri-container3">
-            <div class="zuri-image3">
-                <img alt="" src="zuri-training-img.svg">
-            </div>
-
-            <div class="zuri-content3">
-                <p>We understand a complete beginner cannot become a professional after a few weeks, the
-                    aim here is to get you familiar enough with each of the tools such that you’ll be able to
-                    continue learning on your own with minimal support.</p>
-                <h3><a href="https://training.zuri.team/">I want to be trained ></a></h3>
-            </div>
-
+        <div class="zuri-training">
+            <img src="zuri-training-img.svg" alt="" class="zi">
+            <p>We understand a complete beginner cannot become a professional after a few weeks, the
+                aim here is to get you familiar enough with each of the tools such that you’ll be able to
+                continue learning on your own with minimal support.</p>
+            <p class="training"><a href="https://training.zuri.team/">I want to be trained ></a></p>
         </div>
 
-        <div class="zuri-container4">
-            <div class="zuri-image4">
-                <img alt="" src="zuri-internship-img.svg">
-            </div>
-
-            <div class="zuri-content4">
-                <p>We place you in a work simulation. We give you tasks every week, the tasks ranges from easy to hard
-                    as you progress from stage to stage, making it to the final stage means you are ready for actual
-                    work.</p>
-                <h3><a href="https://internship.zuri.team/">I want to join the internship ></a></h3>
-            </div>
+        <div class="zuri-internship">
+            <img src="zuri-internship-img.svg" alt="" class="zi">
+            <p>We place you in a work simulation. We give you tasks every week, the tasks ranges from easy to hard
+                as you progress from stage to stage, making it to the final stage means you are ready for actual
+                work.</p>
+            <p class="training"><a href="https://internship.zuri.team/">I want to join the internship ></a></p>
         </div>
 
-        <div class="zuri-container5">
-            <div class="zuri-image5">
-                <img alt="" src="zuri-talent-img.svg">
-            </div>
-
-            <div class="zuri-content5">
-                <p>Keeping pace with projects and being on the look out for the extremely talented individuals has
-                    become ever more challenging. Here is where Zuri Team comes into play to bring the best suited
-                    talent for your company</p>
-                <h3><a href="https://talent.zuri.team/">I am looking for talent ></a></h3>
-            </div>
+        <div class="zuri-talent">
+            <img src="zuri-talent-img.svg" alt="" class="zi">
+            <p>Keeping pace with projects and being on the look out for the extremely talented individuals has
+                become ever more challenging. Here is where Zuri Team comes into play to bring the best suited
+                talent for your company.</p>
+            <p class="training"><a href="https://talent.zuri.team/">I am looking for talent ></a></p>
         </div>
     </div>
 
