--- a/industry.html
+++ b/industry.html
@@ -21,6 +21,7 @@
             <li><a href="">FAQs</a></li>
         </ul>
     </nav>
+    <button><img src="thumbs-up.png" alt="">Enroll Now</button>
 </header>
 
 <body>
@@ -32,18 +33,41 @@
             <p class="p-text">And now your search has ended...</p>
             <p class="p-large">Gain knowledge to help you scale through the tech industry for free.</p>
             <p class="p-text2">A basic introduction to software development and product design aimed at complete
-                beginners, which anyone can
-                join</p>
-            <div class="btn">
-                <button><a href="">Enroll now</a></button>
+                beginners, which anyone can join</p>
+            <div class="btns">
+                <button class="my-btn"><a href="">Enroll now</a></button>
             </div>
             <img src="line.svg" alt="line" width="33%" height="28">
+        </div>
+
+        <div class="smallmaleface">
+            <img src="smallmaleface.svg" alt="smallmale" width="100%" height="">
+        </div>
+
+        <div>
+            <img src="arrow image.svg" alt="">
         </div>
 
         <div class="male1">
             <img src="male1.jpg" alt="male1" width="100%" height="">
         </div>
     </div>
+    <hr>
+    <div class="flex-content">
+        <div>
+            <p>INGRESSIVE FOR GOOD WAS LAUNCHED IN JULY 2020 WITH NO DOLLAR IN DONATION...</p>
+        </div>
+        <div>
+            <img src="ingresive logo.jpg" alt="">
+        </div>
+        <div>
+            <p>to help increase the earning power of African youths by providing them with tech skills, community,
+                tools, resolurces and jobs... Read More</p>
+        </div>
+        <hr>
+    </div>
+
+
 
 </body>
 
